--- a/dress.html
+++ b/dress.html
@@ -2,77 +2,99 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kadın Gömlek Modelleri-FashionShop</title>
-  <link rel="stylesheet" href="css/header.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Kadın Elbise Modelleri-FashionShop</title>
+  <link rel="icon" href="images/favicon.png" type="image/png">
+
+  <!-- Stil dosyası -->
+  <link rel="stylesheet" href="css/header.css" />
+  <link rel="stylesheet" href="css/footer.css" />
   <link rel="stylesheet" href="css/products.css">
-  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/user.css">
+ 
+
 
 </head>
 
 <body>
+
   <!-- HEADER BAŞLANGIÇ -->
   <header class="main-header">
-    <div class="main-header">
-      <div class="container">
-        <div class="header-flex">
+      <div class="main-header">
+          <div class="container">
+              <div class="header-flex">
 
-          <!-- Menü Toggle Butonu (Mobil için) -->
-          <button class="menu-toggle" aria-label="Menüyü Aç/Kapat">&#9776;</button>
+                  <!-- Menü Toggle Butonu (Mobil için) -->
+                  <button class="menu-toggle" aria-label="Menüyü Aç/Kapat">&#9776;</button>
 
-          <!-- SOL: LOGO -->
-          <div class="logo">
-            <a href="index.html">
-              <img src="images/logo.jpeg" alt="FashionShop Logo" />
-            </a>
+                  <!-- SOL: LOGO -->
+                  <div class="logo">
+                      <a href="index.html">
+                          <img src="images/logo.jpeg" alt="FashionShop Logo" />
+                      </a>
+                  </div>
+
+                  <!-- ORTA: MENÜ -->
+                  <nav class="main-nav" aria-label="Ana Menü">
+                      <ul class="menu">
+                          <li class="dropdown">
+                              <a href="#">ÜST GİYİM</a>
+                              <ul class="submenu">
+                                  <li><a href="blouse.html">Bluz & Body</a></li>
+                                  <li><a href="dress.html">Elbise</a></li>
+                                  <li><a href="shirts.html">Gömlek</a></li>
+                              </ul>
+                          </li>
+                          <li class="dropdown">
+                              <a href="#">ALT GİYİM</a>
+                              <ul class="submenu">
+                                  <li><a href="/pantolon">Pantolon</a></li>
+                                  <li><a href="/etek">Etek</a></li>
+                                  <li><a href="/sort">Şort</a></li>
+                              </ul>
+                          </li>
+                          <li class="dropdown">
+                              <a href="#">DIŞ GİYİM</a>
+                              <ul class="submenu">
+                                  <li><a href="/ceket">Ceket</a></li>
+                                  <li><a href="/Mont-kaban">Mont & Kaban</a></li>
+                                  <li><a href="/trençkot">Trençkot</a></li>
+                              </ul>
+                          </li>
+                      </ul>
+                  </nav>
+
+                  <!-- SAĞ: HESAP MENÜ -->
+                  <div class="hesap-menu">
+                      <a href="#" id="openLogin"><img src="images/user.png" alt="Hesap" /></a>
+                      <a href="#"><img src="images/wishlist.png" alt="Arama" /></a>
+                      <a href="#"><img src="images/search.png" alt="Favoriler" /></a>
+                      <a href="#"><img src="images/market.png" alt="Sepet" /></a>
+                  </div>
+
+              </div>
           </div>
-
-          <!-- ORTA: MENÜ -->
-          <nav class="main-nav" aria-label="Ana Menü">
-            <ul class="menu">
-              <li class="dropdown">
-                <a href="#">ÜST GİYİM</a>
-                <ul class="submenu">
-                  <li><a href="blouse.html">Bluz & Body</a></li>
-                  <li><a href="dress.html">Elbise</a></li>
-                  <li><a href="shirts.html">Gömlek</a></li>
-                </ul>
-              </li>
-              <li class="dropdown">
-                <a href="#">ALT GİYİM</a>
-                <ul class="submenu">
-                  <li><a href="/pantolon">Pantolon</a></li>
-                  <li><a href="/etek">Etek</a></li>
-                  <li><a href="/sort">Şort</a></li>
-                </ul>
-              </li>
-              <li class="dropdown">
-                <a href="#">DIŞ GİYİM</a>
-                <ul class="submenu">
-                  <li><a href="/ceket">Ceket</a></li>
-                  <li><a href="/Mont-kaban">Mont & Kaban</a></li>
-                  <li><a href="/trençkot">Trençkot</a></li>
-                </ul>
-              </li>
-            </ul>
-          </nav>
-
-          <!-- SAĞ: HESAP MENÜ -->
-          <div class="hesap-menu">
-            <a href="/hesabim"><img src="images/user.png" alt="Hesap" /></a>
-            <a href="/arama"><img src="images/wishlist.png" alt="Arama" /></a>
-            <a href="/favorilerim"><img src="images/search.png" alt="Favoriler" /></a>
-            <a href="/sepetim"><img src="images/market.png" alt="Sepet" /></a>
-          </div>
-
-        </div>
       </div>
-    </div>
+<!------------ Giriş paneli (sidebar) --------------------->
+<div id="loginSidebar" class="sidebar">
+  <button id="closeLogin" class="close-btn">×</button>
+  <form id="loginForm">
+      <h2>Giriş Yap</h2>
+      <label for="email">E-posta:</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="password">Şifre:</label>
+      <input type="password" id="password" name="password" required>
+
+      <button type="submit">Giriş</button>
+  </form>
+</div>
   </header>
   <!-- HEADER BİTİŞ -->
 
-  <!-- ANA İÇERİK: Gömlek Ürünleri -->
+  <!-- ANA İÇERİK: Elbise Ürünleri -->
   <section class="product-list">
 
     <!-- Statik Ürün Kartı 1 -->
@@ -132,52 +154,57 @@
 
   </section>
 
-  <!-- FOOTER BAŞLANGICI -->
-  <footer class="wd-footer footer-container color-scheme-light">
+   <!-- FOOTER BAŞLANGICI -->
+   <footer class="wd-footer footer-container color-scheme-light">
     <div class="container main-footer">
-      <!-- Footer içeriği için grid yapı -->
-      <aside class="footer-sidebar widget-area wd-grid-g" style="--wd-col-lg:12;--wd-gap-lg:30px;--wd-gap-sm:20px;">
+        <!-- Footer içeriği için grid yapı -->
+        <aside class="footer-sidebar widget-area wd-grid-g"
+            style="--wd-col-lg:12;--wd-gap-lg:30px;--wd-gap-sm:20px;">
 
-        <!-- 1. Sütun: İletişim Bilgileri -->
-        <div class="footer-column wd-grid-col" style="--wd-col-xs:12;--wd-col-md:6;--wd-col-lg:3;">
-          <div class="wpb-content-wrapper">
-            <p>Bizlere aşağıdaki iletişim bilgilerinden ulaşabilirsiniz. En kısa sürede geri dönüş sağlayacağız.</p>
-            <ul class="wd-list">
-              <li><img src="images/navigation.png" width="14"> <span>Ataşehir/İSTANBUL</span></li>
-              <li><img src="images/smartphone.png" width="14"> <a href="tel:+08503083706">0 (850) 308 37 06</a></li>
-              <li><img src="images/mail.png" width="14"> <a href="mailto:info@fashionshop.com">info@fashionshop.com</a>
-              </li>
-            </ul>
-          </div>
-        </div>
+            <!-- 1. Sütun: İletişim Bilgileri -->
+            <div class="footer-column wd-grid-col" style="--wd-col-xs:12;--wd-col-md:6;--wd-col-lg:3;">
+                <div class="wpb-content-wrapper">
+                    <p>Bizlere aşağıdaki iletişim bilgilerinden ulaşabilirsiniz. En kısa sürede geri dönüş
+                        sağlayacağız.</p>
+                    <ul class="wd-list">
+                        <li><img src="images/navigation.png" width="14"> <span>Ataşehir/İSTANBUL</span></li>
+                        <li><img src="images/smartphone.png" width="14"> <a href="tel:+08503083706">0 (850) 308 37
+                                06</a></li>
+                        <li><img src="images/mail.png" width="14"> <a
+                                href="mailto:info@fashionshop.com">info@fashionshop.com</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
 
-        <!-- 2. Sütun: Önemli Bilgiler -->
-        <div class="footer-column wd-grid-col" style="--wd-col-xs:12;--wd-col-md:6;--wd-col-lg:3;">
-          <h5>Önemli Bilgiler</h5>
-          <ul>
-            
-            <li><a href="#">Ödeme ve Teslimat</a></li>
-            <li><a href="#">Çerez Politikamız</a></li>
-            <li><a href="#">Mesafeli Satış Sözleşmesi</a></li>
-            <li><a href="#">İptal ve İade Koşulları</a></li>
-            <li><a href="#">Gizlilik ve Güvenlik</a></li>
-            <li><a href="#">Sıkça Sorulan Sorular</a></li>
-            <li><a href="#">Hakkımızda</a></li>
-            <li><a href="#">İletişim</a></li>
-          </ul>
-        </div>
-      </aside>
+            <!-- 2. Sütun: Önemli Bilgiler -->
+            <div class="footer-column wd-grid-col" style="--wd-col-xs:12;--wd-col-md:6;--wd-col-lg:3;">
+                <h5>Önemli Bilgiler</h5>
+                <ul>
+                    
+                    <li><a href="Pd.html">Ödeme ve Teslimat</a></li>
+                    <li><a href="Cookies.html">Çerez Politikamız</a></li>
+                    <li><a href="DSA.html">Mesafeli Satış Sözleşmesi</a></li>
+                    <li><a href="cancellation.html">İptal ve İade Koşulları</a></li>
+                    <li><a href="Psp.html">Gizlilik ve Güvenlik</a></li>
+                    <li><a href="question.html">Sıkça Sorulan Sorular</a></li>
+                    <li><a href="about.html">Hakkımızda</a></li>
+                </ul>
+            </div>
+        </aside>
     </div>
 
     <!-- Telif Hakkı Bölümü -->
     <div class="copyrights">
-      <small>© 2025 - FashionShop | Media Agency: <a href="https://kaiajans.com/"><strong>KAEM
-            Ajans</strong></a></small>
+        <small>© 2025 - FashionShop | Media Agency: <a href="https://kaiajans.com/"><strong>KAEM
+                    Ajans</strong></a></small>
     </div>
-  </footer>
-  <!-- FOOTER BİTİŞ -->
+</footer>
+<!-- FOOTER BİTİŞ -->
 
+  <!--Script-->
   <script src="js/header.js"></script>
+  <script src="js/user.js"></script>
   <script src="js/shirts.js"></script>
 
 </body>
