--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                             <li class="dropdown">
                                 <a href="#">ÜST GİYİM</a>
                                 <ul class="submenu">
-                                    <li><a href="/bluz">Bluz & Body</a></li>
-                                    <li><a href="/elbise">Elbise</a></li>
+                                    <li><a href="blouse.html">Bluz & Body</a></li>
+                                    <li><a href="dress.html">Elbise</a></li>
                                     <li><a href="shirts.html">Gömlek</a></li>
                                 </ul>
                             </li>
