header,logo ve favicon da güncelleme

--- a/blouse.html
+++ b/blouse.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kadın Gömlek Modelleri-FashionShop</title>
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/products.css">
   <link rel="stylesheet" href="css/footer.css">
@@ -24,7 +26,7 @@
           <!-- SOL: LOGO -->
           <div class="logo">
             <a href="index.html">
-              <img src="images/logo.jpeg" alt="FashionShop Logo" />
+              <img src="images/logo.png" alt="FashionShop Logo" />
             </a>
           </div>
 
