--- a/DSA.html
+++ b/DSA.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>MESAFELİ SATIŞ SÖZLEŞMESİ-Fashionshop</title>
-    <link rel="icon" href="images/favicon.png" type="image/png">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
 
     <!-- Stil dosyası -->
     <link rel="stylesheet" href="css/header.css" />
@@ -23,7 +24,7 @@
                     <button class="menu-toggle" aria-label="Menüyü Aç/Kapat">&#9776;</button>
                     <div class="logo">
                         <a href="index.html">
-                            <img src="images/logo.jpeg" alt="FashionShop Logo" />
+                            <img src="images/logo.png" alt="FashionShop Logo" />
                         </a>
                     </div>
                     <nav class="main-nav" aria-label="Ana Menü">
