--- a/Psp.html
+++ b/Psp.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>GİZLİLİK VE GÜVENLİK POLİTİKASI-Fashionshop</title>
-    <link rel="icon" href="images/favicon.png" type="image/png">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
 
     <!-- Stil dosyası -->
     <link rel="stylesheet" href="css/header.css" />
@@ -29,7 +30,7 @@
                     <!-- SOL: LOGO -->
                     <div class="logo">
                         <a href="index.html">
-                            <img src="images/logo.jpeg" alt="FashionShop Logo" />
+                            <img src="images/logo.png" alt="FashionShop Logo" />
                         </a>
                     </div>
 
