--- a/dress.html
+++ b/dress.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kadın Gömlek Modelleri-FashionShop</title>
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/products.css">
   <link rel="stylesheet" href="css/footer.css">
@@ -24,7 +26,7 @@
           <!-- SOL: LOGO -->
           <div class="logo">
             <a href="index.html">
-              <img src="images/logo.jpeg" alt="FashionShop Logo" />
+              <img src="images/logo.png" alt="FashionShop Logo" />
             </a>
           </div>
 
@@ -61,8 +63,8 @@
           <!-- SAĞ: HESAP MENÜ -->
           <div class="hesap-menu">
             <a href="/hesabim"><img src="images/user.png" alt="Hesap" /></a>
-            <a href="/arama"><img src="images/wishlist.png" alt="Arama" /></a>
-            <a href="/favorilerim"><img src="images/search.png" alt="Favoriler" /></a>
+            <a href="/arama"><img src="images/search.png" alt="Arama" /></a>
+            <a href="/favorilerim"><img src="images/wishlist.png" alt="Favoriler" /></a>
             <a href="/sepetim"><img src="images/market.png" alt="Sepet" /></a>
           </div>
 
