--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>FashionShop</title>
-    <link rel="icon" href="images/favicon.png" type="image/png">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
 
     <!-- Stil dosyası -->
     <link rel="stylesheet" href="css/header.css" />
@@ -32,7 +33,7 @@
                     <!-- SOL: LOGO -->
                     <div class="logo">
                         <a href="index.html">
-                            <img src="images/logo.jpeg" alt="FashionShop Logo" />
+                            <img src="images/logo.png" alt="FashionShop Logo" />
                         </a>
                     </div>
 
@@ -69,8 +70,8 @@
                     <!-- SAĞ: HESAP MENÜ -->
                     <div class="hesap-menu">
                         <a href="#" id="openLogin"><img src="images/user.png" alt="Hesap" /></a>
-                        <a href="#"><img src="images/wishlist.png" alt="Arama" /></a>
-                        <a href="#"><img src="images/search.png" alt="Favoriler" /></a>
+                        <a href="#"><img src="images/search.png" alt="Arama" /></a>
+                        <a href="#"><img src="images/wishlist.png" alt="Favoriler" /></a>
                         <a href="#"><img src="images/market.png" alt="Sepet" /></a>
                     </div>
 
