--- a/dress.html
+++ b/dress.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kadın Gömlek Modelleri-FashionShop</title>
+  
+
   <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/products.css">
   <link rel="stylesheet" href="css/user.css">
  
