--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
                             <li class="dropdown">
                                 <a href="#">ÜST GİYİM</a>
                                 <ul class="submenu">
-                                    <li><a href="blouse.html">Bluz & Body</a></li>
-                                    <li><a href="dress.html">Elbise</a></li>
+                                    <li><a href="/bluz">Bluz & Body</a></li>
+                                    <li><a href="/elbise">Elbise</a></li>
                                     <li><a href="shirts.html">Gömlek</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
                                 <a href="#">ALT GİYİM</a>
                                 <ul class="submenu">
-                                    <li><a href="pants.html">Pantolon</a></li>
-                                    <li><a href="skirt.html">Etek</a></li>
-                                    <li><a href="shorts.html">Şort</a></li>
+                                    <li><a href="/pantolon">Pantolon</a></li>
+                                    <li><a href="/etek">Etek</a></li>
+                                    <li><a href="/sort">Şort</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
