--- a/shirts.html
+++ b/shirts.html
@@ -8,6 +8,7 @@
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
   <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/products.css">
   <link rel="stylesheet" href="css/user.css">
  
