--- a/coats.html
+++ b/coats.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kadın Etek Modelleri-FashionShop</title>
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <title>Kadın Mont&Kaban Modelleri-FashionShop</title>
+  <link rel="icon" href="images/favicon.png" type="image/png">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/products.css">
   <link rel="stylesheet" href="css/footer.css">
@@ -88,95 +88,95 @@
   </header>
   <!-- HEADER BİTİŞ -->
 
-  <!-- ANA İÇERİK: Etek Ürünleri -->
+  <!-- ANA İÇERİK: Mont&Kaban Ürünleri -->
   <section class="product-list">
 
     <!-- Statik Ürün Kartı 1 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/KatlıMiniEtek.jpg" alt="Katlı Mini Etek">
-      <h3>Katlı Mini Etek</h3>
-      <p>449.99 TL</p>
+      <img src="images/urunler/coats/AcıKahveKısaKurk.jpg" alt="Acı Kahve Kısa Kürk">
+      <h3>Acı Kahve Kısa Kürk</h3>
+      <p>1299.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 2 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/UzunYırtmaclıEtek.jpg" alt="Uzun Yırtmaçlı Etek">
-      <h3> Uzun Yırtmaçlı Etek</h3>
-      <p>499.99 TL</p>
+      <img src="images/urunler/coats/AntrasitKaseKaban.jpg" alt="Antrasit Maxi Kaşe Kaban">
+      <h3>Antrasit Maxi Kaşe Kaban</h3>
+      <p>1299.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 3 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/DeriMiniEtek.jpg" alt="Kahve Deri Mini Etek">
-      <h3>Kahve Deri Mini Etek </h3>
-      <p>549.99 TL</p>
+      <img src="images/urunler/coats/BejKaseKaban.jpg" alt="Bej Maxi Kaşe Kaban">
+      <h3>Bej Maxi Kaşe Kaban </h3>
+      <p>1299.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 4 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/UzunTülEtek.jpg" alt="Tüllü Mini Etek">
-      <h3>Tüllü Mini Etek</h3>
-      <p>599.99 TL</p>
+      <img src="images/urunler/coats/CizgiliKısaKaban.jpg" alt="Çizgili Kısa Kaban">
+      <h3>Çizgili Kısa Kaban</h3>
+      <p>1199.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 5 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/MiniTulEtek.jpg" alt="Beyaz Mini Tül Etek">
-      <h3>Beyaz Mini Tül Etek</h3>
-      <p>599.99 TL</p>
+      <img src="images/urunler/coats/KahveDenimMont.jpg" alt="Kahve Denim Detaylı Mont">
+      <h3>Kahve Denim Detaylı Mont</h3>
+      <p>999.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 6 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/FırfırlıMiniEtek.jpg" alt="Siyah Fırfırlı Mini Etek">
-      <h3>Siyah Fırfırlı Mini Etek</h3>
-      <p>499.99 TL</p>
+      <img src="images/urunler/coats/KahveKaseKaban.jpg" alt="Kahve Maxi Kaşe Kaban">
+      <h3>Kahve Maxi Kaşe Kaban</h3>
+      <p>1299.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 7 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/MiniBordoEtek.jpg" alt="Mini Bordo Etek">
-      <h3>Mini Bordo Etek</h3>
-      <p>399.99 TL</p>
+      <img src="images/urunler/coats/KurkluSiyahKaseKaban.jpg" alt="Kürklü Siyah Kaşe Kaban">
+      <h3>Kürklü Siyah Kaşe Kaban</h3>
+      <p>1499.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 8 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/MiniKotEtek.jpg" alt="Mini Kot Etek">
-      <h3>Mini Kot Etek</h3>
-      <p>499.99 TL</p>
+      <img src="images/urunler/coats/SiyahKaseKaban.jpg" alt="Siyah Maxi Kaşe Kaban">
+      <h3>Siyah Maxi Kaşe Kaban</h3>
+      <p>1299.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 9 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/UzunLacivertEtek.jpg" alt="Uzun Lacivert Etek">
-      <h3>Uzun Lacivert Etek</h3>
-      <p>449.99 TL</p>
+      <img src="images/urunler/coats/TasBaglamalıMont.jpg" alt="Taş Renk Bağlamalı Mont">
+      <h3>Taş Renk Bağlamalı Mont</h3>
+      <p>999.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 10 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/PileliYesilEtek.jpg" alt="Yeşil Pileli Etek">
-      <h3>Yeşil Pileli Etek</h3>
-      <p>449.99 TL</p>
+      <img src="images/urunler/coats/TasOrtaKürk.jpg" alt="Taş Renk Orta Boy Kürk">
+      <h3>Taş Renk Orta Boy Kürk</h3>
+      <p>1499.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
@@ -207,19 +207,18 @@
         <div class="footer-column wd-grid-col" style="--wd-col-xs:12;--wd-col-md:6;--wd-col-lg:3;">
           <h5>Önemli Bilgiler</h5>
           <ul>
-            
-            <li><a href="#">Ödeme ve Teslimat</a></li>
-            <li><a href="#">Çerez Politikamız</a></li>
-            <li><a href="#">Mesafeli Satış Sözleşmesi</a></li>
-            <li><a href="#">İptal ve İade Koşulları</a></li>
-            <li><a href="#">Gizlilik ve Güvenlik</a></li>
-            <li><a href="#">Sıkça Sorulan Sorular</a></li>
-            <li><a href="#">Hakkımızda</a></li>
-            <li><a href="#">İletişim</a></li>
+              
+              <li><a href="Pd.html">Ödeme ve Teslimat</a></li>
+              <li><a href="Cookies.html">Çerez Politikamız</a></li>
+              <li><a href="DSA.html">Mesafeli Satış Sözleşmesi</a></li>
+              <li><a href="cancellation.html">İptal ve İade Koşulları</a></li>
+              <li><a href="Psp.html">Gizlilik ve Güvenlik</a></li>
+              <li><a href="question.html">Sıkça Sorulan Sorular</a></li>
+              <li><a href="about.html">Hakkımızda</a></li>
           </ul>
-        </div>
-      </aside>
-    </div>
+      </div>
+  </aside>
+</div>
 
     <!-- Telif Hakkı Bölümü -->
     <div class="copyrights">
@@ -230,7 +229,7 @@
   <!-- FOOTER BİTİŞ -->
 
   <script src="js/header.js"></script>
-  <script src="js/pants.js"></script>
+  <script src="js/jackets.js"></script>
   <script src="js/user.js"></script>
 
 </body>
