--- a/jackets.html
+++ b/jackets.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kadın Etek Modelleri-FashionShop</title>
+  <title>Kadın Ceket Modelleri-FashionShop</title>
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/products.css">
@@ -67,7 +67,6 @@
             <a href="#"><img src="images/search.png" alt="Favoriler" /></a>
             <a href="#"><img src="images/market.png" alt="Sepet" /></a>
         </div>
-
         </div>
       </div>
     </div>
@@ -88,49 +87,49 @@
   </header>
   <!-- HEADER BİTİŞ -->
 
-  <!-- ANA İÇERİK: Etek Ürünleri -->
+  <!-- ANA İÇERİK: Ceket Ürünleri -->
   <section class="product-list">
 
     <!-- Statik Ürün Kartı 1 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/KatlıMiniEtek.jpg" alt="Katlı Mini Etek">
-      <h3>Katlı Mini Etek</h3>
-      <p>449.99 TL</p>
+      <img src="images/urunler/jackets/BejKurkCeket.jpg" alt="Bej Kürk Ceket">
+      <h3>Bej Kürk Ceket</h3>
+      <p>799.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 2 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/UzunYırtmaclıEtek.jpg" alt="Uzun Yırtmaçlı Etek">
-      <h3> Uzun Yırtmaçlı Etek</h3>
-      <p>499.99 TL</p>
+      <img src="images/urunler/jackets/BejKusaklıCeket.jpg" alt="Bej Kuşaklı Ceket">
+      <h3> Bej Kuşaklı Ceket</h3>
+      <p>699.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 3 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/DeriMiniEtek.jpg" alt="Kahve Deri Mini Etek">
-      <h3>Kahve Deri Mini Etek </h3>
-      <p>549.99 TL</p>
+      <img src="images/urunler/jackets/BeyazCropCeket.jpg" alt="Beyaz Crop Ceket ">
+      <h3>Beyaz Crop Ceket </h3>
+      <p>499.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 4 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/UzunTülEtek.jpg" alt="Tüllü Mini Etek">
-      <h3>Tüllü Mini Etek</h3>
-      <p>599.99 TL</p>
+      <img src="images/urunler/jackets/CizgiliOversizeCeket.jpg" alt="Siyah Çizgili Oversize Ceket">
+      <h3>Siyah Çizgili Oversize Ceket</h3>
+      <p>549.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 5 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/MiniTulEtek.jpg" alt="Beyaz Mini Tül Etek">
-      <h3>Beyaz Mini Tül Etek</h3>
+      <img src="images/urunler/jackets/DenimCeket.jpg" alt="Mavi Denim Ceket">
+      <h3>Mavi Denim Ceket</h3>
       <p>599.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -138,45 +137,45 @@
 
     <!-- Statik Ürün Kartı 6 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/FırfırlıMiniEtek.jpg" alt="Siyah Fırfırlı Mini Etek">
-      <h3>Siyah Fırfırlı Mini Etek</h3>
-      <p>499.99 TL</p>
+      <img src="images/urunler/jackets/KahveDeriCeket.jpg" alt="Kahve Deri Ceket">
+      <h3>Kahve Deri Ceket</h3>
+      <p>799.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 7 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/MiniBordoEtek.jpg" alt="Mini Bordo Etek">
-      <h3>Mini Bordo Etek</h3>
-      <p>399.99 TL</p>
+      <img src="images/urunler/jackets/KahveKısaCeket.jpg" alt="Kahve Kısa Ceket">
+      <h3>Kahve Kısa Ceket</h3>
+      <p>499.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 8 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/MiniKotEtek.jpg" alt="Mini Kot Etek">
-      <h3>Mini Kot Etek</h3>
-      <p>499.99 TL</p>
+      <img src="images/urunler/jackets/LacivertBlazer.jpg" alt="Lacivert Belden Oturmalı Ceket">
+      <h3>Lacivert Belden Oturmalı Ceket</h3>
+      <p>699.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 9 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/UzunLacivertEtek.jpg" alt="Uzun Lacivert Etek">
-      <h3>Uzun Lacivert Etek</h3>
-      <p>449.99 TL</p>
+      <img src="images/urunler/jackets/LeoparCeket.jpg" alt="Leopar Desenli Ceket">
+      <h3>Leopar Desenli Ceket</h3>
+      <p>899.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 10 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/PileliYesilEtek.jpg" alt="Yeşil Pileli Etek">
-      <h3>Yeşil Pileli Etek</h3>
-      <p>449.99 TL</p>
+      <img src="images/urunler/jackets/OturanDenim.jpg" alt="Belden Oturmalı Denim Ceket">
+      <h3>Belden Oturmalı Denim Ceket</h3>
+      <p>699.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
@@ -230,7 +229,7 @@
   <!-- FOOTER BİTİŞ -->
 
   <script src="js/header.js"></script>
-  <script src="js/pants.js"></script>
+  <script src="js/jackets.js"></script>
   <script src="js/user.js"></script>
 
 </body>
