--- a/trenchcoats.html
+++ b/trenchcoats.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kadın Etek Modelleri-FashionShop</title>
+  <title>Kadın Trençkot Modelleri-FashionShop</title>
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/products.css">
@@ -67,7 +66,6 @@
             <a href="#"><img src="images/search.png" alt="Favoriler" /></a>
             <a href="#"><img src="images/market.png" alt="Sepet" /></a>
         </div>
-
         </div>
       </div>
     </div>
@@ -88,95 +86,95 @@
   </header>
   <!-- HEADER BİTİŞ -->
 
-  <!-- ANA İÇERİK: Etek Ürünleri -->
+  <!-- ANA İÇERİK: Trençkot Ürünleri -->
   <section class="product-list">
 
     <!-- Statik Ürün Kartı 1 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/KatlıMiniEtek.jpg" alt="Katlı Mini Etek">
-      <h3>Katlı Mini Etek</h3>
-      <p>449.99 TL</p>
+      <img src="images/urunler/trenchcoats/AntrasitMaxiTrenc.jpg" alt="Antrasit Maxi Trençkot">
+      <h3>Antrasit Maxi Trençkot</h3>
+      <p>999.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 2 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/UzunYırtmaclıEtek.jpg" alt="Uzun Yırtmaçlı Etek">
-      <h3> Uzun Yırtmaçlı Etek</h3>
-      <p>499.99 TL</p>
+      <img src="images/urunler/trenchcoats/BejMaxiTrenc.jpg" alt="Bej Maxi Trençkot">
+      <h3> Bej Maxi Trençkot</h3>
+      <p>999.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 3 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/DeriMiniEtek.jpg" alt="Kahve Deri Mini Etek">
-      <h3>Kahve Deri Mini Etek </h3>
-      <p>549.99 TL</p>
+      <img src="images/urunler/trenchcoats/DeriMaxiTrenc.jpg" alt="Deri Maxi Trençkot ">
+      <h3>Deri Maxi Trençkot </h3>
+      <p>1499.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 4 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/UzunTülEtek.jpg" alt="Tüllü Mini Etek">
-      <h3>Tüllü Mini Etek</h3>
-      <p>599.99 TL</p>
+      <img src="images/urunler/trenchcoats/HakiMaxiTrenc.jpg" alt="Haki Maxi Trençkot">
+      <h3>Haki Maxi Trençkot</h3>
+      <p>999.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 5 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/MiniTulEtek.jpg" alt="Beyaz Mini Tül Etek">
-      <h3>Beyaz Mini Tül Etek</h3>
-      <p>599.99 TL</p>
+      <img src="images/urunler/trenchcoats/AntrasitCropTrenc.jpg" alt="Antrasit Crop Trençkot">
+      <h3>Antrasit Crop Trençkot</h3>
+      <p>699.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 6 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/FırfırlıMiniEtek.jpg" alt="Siyah Fırfırlı Mini Etek">
-      <h3>Siyah Fırfırlı Mini Etek</h3>
-      <p>499.99 TL</p>
+      <img src="images/urunler/trenchcoats/BordoCropTrenc.jpg" alt="Bordo Crop Trençkot">
+      <h3>Bordo Crop Trençkot</h3>
+      <p>699.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 7 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/MiniBordoEtek.jpg" alt="Mini Bordo Etek">
-      <h3>Mini Bordo Etek</h3>
-      <p>399.99 TL</p>
+      <img src="images/urunler/trenchcoats/DenimTrenc.jpg" alt="Orta Boy Denim Trençkot">
+      <h3>Orta Boy Denim Trençkot</h3>
+      <p>999.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 8 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/MiniKotEtek.jpg" alt="Mini Kot Etek">
-      <h3>Mini Kot Etek</h3>
-      <p>499.99 TL</p>
+      <img src="images/urunler/trenchcoats/DeriOrtaTrenc.jpg" alt="Orta Boy Deri Trençkot">
+      <h3>Orta Boy Deri Trençkot</h3>
+      <p>999.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 9 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/UzunLacivertEtek.jpg" alt="Uzun Lacivert Etek">
-      <h3>Uzun Lacivert Etek</h3>
-      <p>449.99 TL</p>
+      <img src="images/urunler/trenchcoats/HakiOrtaTrenc.jpg" alt="Haki Orta Boy Trençkot">
+      <h3>Haki Orta Boy Trençkot</h3>
+      <p>999.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
 
     <!-- Statik Ürün Kartı 10 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/PileliYesilEtek.jpg" alt="Yeşil Pileli Etek">
-      <h3>Yeşil Pileli Etek</h3>
-      <p>449.99 TL</p>
+      <img src="images/urunler/trenchcoats/LacivertCropTrenc.jpg" alt="Lacivert Crop Trençkot">
+      <h3>Lacivert Crop Trençkot</h3>
+      <p>699.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
@@ -230,7 +228,7 @@
   <!-- FOOTER BİTİŞ -->
 
   <script src="js/header.js"></script>
-  <script src="js/pants.js"></script>
+  <script src="js/jackets.js"></script>
   <script src="js/user.js"></script>
 
 </body>
