--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>FashionShop</title>
-    <link rel="icon" href="images/favicon.png" type="image/png">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
     <!-- Stil dosyası -->
     <link rel="stylesheet" href="css/header.css" />
@@ -58,9 +58,9 @@
                             <li class="dropdown">
                                 <a href="#">DIŞ GİYİM</a>
                                 <ul class="submenu">
-                                    <li><a href="/ceket">Ceket</a></li>
-                                    <li><a href="/Mont-kaban">Mont & Kaban</a></li>
-                                    <li><a href="/trençkot">Trençkot</a></li>
+                                    <li><a href="jackets.html">Ceket</a></li>
+                                    <li><a href="coats.html">Mont & Kaban</a></li>
+                                    <li><a href="trenchcoats.html">Trençkot</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -109,13 +109,6 @@
             </section>
         </div>
     </main>
-
-
-
-
-    
-    
-
 
 
 
