--- a/pants.html
+++ b/pants.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kadın Pantolon Modelleri-FashionShop</title>
-  <link rel="icon" href="images/favicon.png" type="image/png">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/products.css">
   <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/user.css">
 
 </head>
 
@@ -51,9 +52,9 @@
               <li class="dropdown">
                 <a href="#">DIŞ GİYİM</a>
                 <ul class="submenu">
-                  <li><a href="/ceket">Ceket</a></li>
-                  <li><a href="/Mont-kaban">Mont & Kaban</a></li>
-                  <li><a href="/trençkot">Trençkot</a></li>
+                  <li><a href="jackets.html">Ceket</a></li>
+                  <li><a href="coats.html">Mont & Kaban</a></li>
+                  <li><a href="trenchcoats.html">Trençkot</a></li>
                 </ul>
               </li>
             </ul>
@@ -61,19 +62,33 @@
 
           <!-- SAĞ: HESAP MENÜ -->
           <div class="hesap-menu">
-            <a href="/hesabim"><img src="images/user.png" alt="Hesap" /></a>
-            <a href="/arama"><img src="images/wishlist.png" alt="Arama" /></a>
-            <a href="/favorilerim"><img src="images/search.png" alt="Favoriler" /></a>
-            <a href="/sepetim"><img src="images/market.png" alt="Sepet" /></a>
-          </div>
+            <a href="#" id="openLogin"><img src="images/user.png" alt="Hesap" /></a>
+            <a href="#"><img src="images/wishlist.png" alt="Arama" /></a>
+            <a href="#"><img src="images/search.png" alt="Favoriler" /></a>
+            <a href="#"><img src="images/market.png" alt="Sepet" /></a>
+        </div>
 
         </div>
       </div>
     </div>
+    <!------------ Giriş paneli (sidebar) --------------------->
+<div id="loginSidebar" class="sidebar">
+  <button id="closeLogin" class="close-btn">×</button>
+  <form id="loginForm">
+      <h2>Giriş Yap</h2>
+      <label for="email">E-posta:</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="password">Şifre:</label>
+      <input type="password" id="password" name="password" required>
+
+      <button type="submit">Giriş</button>
+  </form>
+</div>
   </header>
   <!-- HEADER BİTİŞ -->
 
-  <!-- ANA İÇERİK: Gömlek Ürünleri -->
+  <!-- ANA İÇERİK: Pantolon Ürünleri -->
   <section class="product-list">
 
     <!-- Statik Ürün Kartı 1 -->
@@ -216,6 +231,7 @@
 
   <script src="js/header.js"></script>
   <script src="js/pants.js"></script>
+  <script src="js/user.js"></script>
 
 </body>
 
