Ürün sayfalarında güncellemeler yapıldı

--- a/blouse.html
+++ b/blouse.html
@@ -6,9 +6,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kadın Bluz&Body Modelleri-FashionShop</title>
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <!--Stil Dosyaları-->
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/products.css">
+  <link rel="stylesheet" href="css/user.css">
  
 
 </head>
@@ -177,6 +180,24 @@
       <button class="favorite-icon">♥</button>
     </div>
 
+    <!-- Statik Ürün Kartı 9 -->
+    <div class="product-card">
+      <img src="images/urunler/blouse/kayıkyaka-beyaz-blouse.jpg" alt="Kayık Yaka Beyaz Bluz">
+      <h3>Kayık Yaka Beyaz Bluz</h3>
+      <p>329.99 TL</p>
+      <button class="add-to-cart">Sepete Ekle</button>
+      <button class="favorite-icon">♥</button>
+    </div>
+
+    <!-- Statik Ürün Kartı 10-->
+    <div class="product-card">
+      <img src="images/urunler/blouse/straplez-siyah-blouse.jpg" alt="Straplez Siyah Bluz">
+      <h3>Straplez Siyah Bluz</h3>
+      <p>419.99 TL</p>
+      <button class="add-to-cart">Sepete Ekle</button>
+      <button class="favorite-icon">♥</button>
+    </div>
+
 
   </section>
 
@@ -230,7 +251,7 @@
 
 <script src="js/header.js"></script>
 <script src="js/user.js"></script>
-  <script src="js/shirts.js"></script>
+<script src="js/shirts.js"></script>
 
 </body>
 
