--- a/dress.html
+++ b/dress.html
@@ -5,74 +5,105 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kadın Gömlek Modelleri-FashionShop</title>
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
+  <!--Stil Dosyaları-->
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/products.css">
-  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/user.css">
+  
 
 </head>
 
 <body>
 
-  <!-- HEADER BAŞLANGIÇ -->
-  <header class="main-header">
-      <div class="main-header">
-          <div class="container">
-              <div class="header-flex">
+   <!-- HEADER BAŞLANGIÇ -->
+   <header class="main-header">
+    <div class="main-header">
+        <div class="container">
+            <div class="header-flex">
 
-                  <!-- Menü Toggle Butonu (Mobil için) -->
-                  <button class="menu-toggle" aria-label="Menüyü Aç/Kapat">&#9776;</button>
+                <!-- Menü Toggle Butonu (Mobil için) -->
+                <button class="menu-toggle" aria-label="Menüyü Aç/Kapat">&#9776;</button>
 
-          <!-- SOL: LOGO -->
-          <div class="logo">
-            <a href="index.html">
-              <img src="images/logo.jpeg" alt="FashionShop Logo" />
-            </a>
-          </div>
+                <!-- SOL: LOGO -->
+                <div class="logo">
+                    <a href="index.html">
+                        <img src="images/logo.png" alt="FashionShop Logo" />
+                    </a>
+                </div>
 
-          <!-- ORTA: MENÜ -->
-          <nav class="main-nav" aria-label="Ana Menü">
-            <ul class="menu">
-              <li class="dropdown">
-                <a href="#">ÜST GİYİM</a>
-                <ul class="submenu">
-                  <li><a href="blouse.html">Bluz & Body</a></li>
-                  <li><a href="dress.html">Elbise</a></li>
-                  <li><a href="shirts.html">Gömlek</a></li>
-                </ul>
-              </li>
-              <li class="dropdown">
-                <a href="#">ALT GİYİM</a>
-                <ul class="submenu">
-                  <li><a href="pants.html">Pantolon</a></li>
-                  <li><a href="skirt.html">Etek</a></li>
-                  <li><a href="shorts.html">Şort</a></li>
-                </ul>
-              </li>
-              <li class="dropdown">
-                <a href="#">DIŞ GİYİM</a>
-                <ul class="submenu">
-                  <li><a href="jackets.html">Ceket</a></li>
-                  <li><a href="coats.html">Mont & Kaban</a></li>
-                  <li><a href="trenchcoats.html">Trençkot</a></li>
-                </ul>
-              </li>
-            </ul>
-          </nav>
+                <!-- ORTA: MENÜ -->
+                <nav class="main-nav" aria-label="Ana Menü">
+                    <ul class="menu">
+                        <li class="dropdown">
+                            <a href="#">ÜST GİYİM</a>
+                            <ul class="submenu">
+                                <li><a href="blouse.html">Bluz & Body</a></li>
+                                <li><a href="dress.html">Elbise</a></li>
+                                <li><a href="shirts.html">Gömlek</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#">ALT GİYİM</a>
+                            <ul class="submenu">
+                                <li><a href="pants.html">Pantolon</a></li>
+                                <li><a href="skirt.html">Etek</a></li>
+                                <li><a href="shorts.html">Şort</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#">DIŞ GİYİM</a>
+                            <ul class="submenu">
+                                <li><a href="jackets.html">Ceket</a></li>
+                                <li><a href="coats.html">Mont & Kaban</a></li>
+                                <li><a href="trenchcoats.html">Trençkot</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
 
-          <!-- SAĞ: HESAP MENÜ -->
-          <div class="hesap-menu">
-            <a href="#" id="openLogin"><img src="images/user.png" alt="Hesap" /></a>
-            <a href="#"><img src="images/wishlist.png" alt="Arama" /></a>
-            <a href="#"><img src="images/search.png" alt="Favoriler" /></a>
-            <a href="#"><img src="images/market.png" alt="Sepet" /></a>
+                <!-- SAĞ: HESAP MENÜ -->
+                <div class="hesap-menu">
+                    <a href="#" id="searchIcon"><img src="images/search.png" alt="Arama" /></a>
+                    <a href="#" id="openLogin"><img src="images/user.png" alt="Hesap" /></a>
+                    <a href="#"><img src="images/wishlist.png" alt="Favoriler" /></a>
+                    <a href="#"><img src="images/market.png" alt="Sepet" /></a>
+                </div>
+
+            </div>
         </div>
-
-        </div>
-      </div>
     </div>
-  </header>
-  <!-- HEADER BİTİŞ -->
+<!------------ Giriş paneli (sidebar) --------------------->
+<div id="loginSidebar" class="sidebar">
+<button id="closeLogin" class="close-btn">×</button>
+<form id="loginForm">
+    <h2>Giriş Yap</h2>
+    <label for="email">E-posta:</label>
+    <input type="email" id="email" name="email" required>
+
+    <label for="password">Şifre:</label>
+    <input type="password" id="password" name="password" required>
+
+    <button type="submit">Giriş</button>
+</form>
+</div>
+
+<!-- Arama Kutusu Overlay -->
+<!-- Arama Kutusu Overlay -->
+<div class="search-overlay" id="searchOverlay">
+<div class="search-container">
+  <input type="text" placeholder="Ürün, kategori ara..." id="searchInput" />
+  <button id="closeSearch" aria-label="Kapat">×</button>
+</div>
+<div id="searchResults" class="search-results"></div> <!-- BURAYA EKLENDİ -->
+</div>
+
+
+
+</header>
+<!-- HEADER BİTİŞ -->
 
   <!-- ANA İÇERİK: Elbise Ürünleri -->
   <section class="product-list">
@@ -222,7 +253,7 @@
   <script src="js/header.js"></script>
   <script src="js/user.js"></script>
   <script src="js/shirts.js"></script>
-  <script src="js/user.js"></script>
+  
 
 </body>
 
