products.js eklendi ve searck kısmı tamamlandı

--- a/index.html
+++ b/index.html
@@ -174,8 +174,11 @@
 <!-- FOOTER BİTİŞ -->
 
     <!-- Script: Menü aç/kapat -->
-    <script src="js/header.js"></script>
+    <script src="js/products.js"></script>
+    <script src="js/search.js"></script>
     <script src="js/user.js"></script>
+    <script src="js/header.js"></script>
+
 
 </body>
 
