--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/user.css">
-   
+
 
 
 </head>
@@ -77,33 +77,33 @@
                 </div>
             </div>
         </div>
-<!------------ Giriş paneli (sidebar) --------------------->
-  <div id="loginSidebar" class="sidebar">
-    <button id="closeLogin" class="close-btn">×</button>
-    <form id="loginForm">
-        <h2>Giriş Yap</h2>
-        <label for="email">E-posta:</label>
-        <input type="email" id="email" name="email" required>
+        <!------------ Giriş paneli (sidebar) --------------------->
+        <div id="loginSidebar" class="sidebar">
+            <button id="closeLogin" class="close-btn">×</button>
+            <form id="loginForm">
+                <h2>Giriş Yap</h2>
+                <label for="email">E-posta:</label>
+                <input type="email" id="email" name="email" required>
 
-        <label for="password">Şifre:</label>
-        <input type="password" id="password" name="password" required>
+                <label for="password">Şifre:</label>
+                <input type="password" id="password" name="password" required>
 
-        <button type="submit">Giriş</button>
-    </form>
-</div>
+                <button type="submit">Giriş</button>
+            </form>
+        </div>
 
-<!-- Arama Kutusu Overlay -->
-<!-- Arama Kutusu Overlay -->
-<div class="search-overlay" id="searchOverlay">
-    <div class="search-container">
-      <input type="text" placeholder="Ürün, kategori ara..." id="searchInput" />
-      <button id="closeSearch" aria-label="Kapat">×</button>
-    </div>
-    <div id="searchResults" class="search-results"></div> <!-- BURAYA EKLENDİ -->
-  </div>
-  
-  
-  
+        <!-- Arama Kutusu Overlay -->
+        <!-- Arama Kutusu Overlay -->
+        <div class="search-overlay" id="searchOverlay">
+            <div class="search-container">
+                <input type="text" placeholder="Ürün, kategori ara..." id="searchInput" />
+                <button id="closeSearch" aria-label="Kapat">×</button>
+            </div>
+            <div id="searchResults" class="search-results"></div> <!-- BURAYA EKLENDİ -->
+        </div>
+
+
+
     </header>
     <!-- HEADER BİTİŞ -->
 
@@ -117,7 +117,7 @@
                 <div class="hero-text">
                     <h1>Yeni Sezon</h1>
                     <p>Tarzını Yansıt</p>
-                   
+
                 </div>
             </section>
         </div>
@@ -125,53 +125,68 @@
 
 
 
-   <!-- FOOTER BAŞLANGICI -->
-   <footer class="wd-footer footer-container color-scheme-light">
-    <div class="container main-footer">
-        <!-- Footer içeriği için grid yapı -->
-        <aside class="footer-sidebar widget-area wd-grid-g"
-            style="--wd-col-lg:12;--wd-gap-lg:30px;--wd-gap-sm:20px;">
+    <!-- FOOTER BAŞLANGICI -->
+    <footer class="wd-footer footer-container color-scheme-light">
+        <div class="container main-footer">
+            <!-- Footer içeriği için grid yapı -->
+            <aside class="footer-sidebar widget-area wd-grid-g"
+                style="--wd-col-lg:12;--wd-gap-lg:30px;--wd-gap-sm:20px;">
 
-            <!-- 1. Sütun: İletişim Bilgileri -->
-            <div class="footer-column wd-grid-col" style="--wd-col-xs:12;--wd-col-md:6;--wd-col-lg:3;">
-                <div class="wpb-content-wrapper">
-                    <p>Bizlere aşağıdaki iletişim bilgilerinden ulaşabilirsiniz. En kısa sürede geri dönüş
-                        sağlayacağız.</p>
-                    <ul class="wd-list">
-                        <li><img src="images/navigation.png" width="14"> <span>Ataşehir/İSTANBUL</span></li>
-                        <li><img src="images/smartphone.png" width="14"> <a href="tel:+08503083706">0 (850) 308 37
-                                06</a></li>
-                        <li><img src="images/mail.png" width="14"> <a
-                                href="mailto:info@fashionshop.com">info@fashionshop.com</a>
-                        </li>
+                <!-- 1. Sütun: İletişim Bilgileri -->
+                <div class="footer-column wd-grid-col" style="--wd-col-xs:12;--wd-col-md:6;--wd-col-lg:3;">
+                    <div class="wpb-content-wrapper">
+                        <p>Bizlere aşağıdaki iletişim bilgilerinden ulaşabilirsiniz. En kısa sürede geri dönüş
+                            sağlayacağız.</p>
+                        <ul class="wd-list">
+                            <li><img src="images/navigation.png" width="14"> <span>Ataşehir/İSTANBUL</span></li>
+                            <li><img src="images/smartphone.png" width="14"> <a href="tel:+08503083706">0 (850) 308 37
+                                    06</a></li>
+                            <li><img src="images/mail.png" width="14"> <a
+                                    href="mailto:info@fashionshop.com">info@fashionshop.com</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- 2. Sütun: Önemli Bilgiler -->
+                <div class="footer-column wd-grid-col" style="--wd-col-xs:12;--wd-col-md:6;--wd-col-lg:3;">
+                    <h5>Önemli Bilgiler</h5>
+                    <ul>
+
+                        <li><a href="Pd.html">Ödeme ve Teslimat</a></li>
+                        <li><a href="Cookies.html">Çerez Politikamız</a></li>
+                        <li><a href="DSA.html">Mesafeli Satış Sözleşmesi</a></li>
+                        <li><a href="cancellation.html">İptal ve İade Koşulları</a></li>
+                        <li><a href="Psp.html">Gizlilik ve Güvenlik</a></li>
+                        <li><a href="question.html">Sıkça Sorulan Sorular</a></li>
+                        <li><a href="about.html">Hakkımızda</a></li>
                     </ul>
                 </div>
-            </div>
+            </aside>
+        </div>
 
-            <!-- 2. Sütun: Önemli Bilgiler -->
-            <div class="footer-column wd-grid-col" style="--wd-col-xs:12;--wd-col-md:6;--wd-col-lg:3;">
-                <h5>Önemli Bilgiler</h5>
-                <ul>
-                    
-                    <li><a href="Pd.html">Ödeme ve Teslimat</a></li>
-                    <li><a href="Cookies.html">Çerez Politikamız</a></li>
-                    <li><a href="DSA.html">Mesafeli Satış Sözleşmesi</a></li>
-                    <li><a href="cancellation.html">İptal ve İade Koşulları</a></li>
-                    <li><a href="Psp.html">Gizlilik ve Güvenlik</a></li>
-                    <li><a href="question.html">Sıkça Sorulan Sorular</a></li>
-                    <li><a href="about.html">Hakkımızda</a></li>
-                </ul>
-            </div>
-        </aside>
-    </div>
 
-    <!-- Telif Hakkı Bölümü -->
-    <div class="copyrights">
-        <small>© 2025 - FashionShop | Media Agency: <a href="https://kaiajans.com/"><strong>KAEM
-                    Ajans</strong></a></small>
-    </div>
-</footer>
-<!-- FOOTER BİTİŞ -->
+        <!-- SOSYAL MEDYA İKONLARI -->
+        <div class="footer-social">
+            <a href="https://www.instagram.com" target="_blank">
+                <img src="images/instagram.png" alt="Instagram">
+            </a>
+            <a href="https://www.facebook.com" target="_blank">
+                <img src="images/facebook.png" alt="Facebook">
+            </a>
+            <a href="https://www.twitter.com" target="_blank">
+                <img src="images/twitter.png" alt="X">
+            </a>
+        </div>
+
+
+        <!-- Telif Hakkı Bölümü -->
+        <div class="copyrights">
+            <small>© 2025 - FashionShop | Media Agency: <a href="https://kaiajans.com/"><strong>KAEM
+                        Ajans</strong></a></small>
+        </div>
+    </footer>
+    <!-- FOOTER BİTİŞ -->
 
     <!-- Script: Menü aç/kapat -->
     <script src="js/products.js"></script>
